--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.karumi:dexter:5.0.0'
-
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
 
 
 }
